# PowderyMildewCNNs-Python

./: .gitignore  CHANGELOG.md  README.md  analyzer.py  dag2onnx.m  requirements.txt  thresholder.py
cpp_functions/: CMakeLists.txt  leaf_masking.cp311-win_amd64.pyd  leaf_masking.cpp
models/: Hyphal2019Net2.onnx  SporeNet3.onnx  dag2onnx.m
test/: test_cnn.py
